        * Improve a assignment compilation error messege. "argument 2" -> "2th argument".
        * Use native api "get_chars" more instead of "get_elems_byte" in the right places.
        * Add mutable type qualifier.
        * Improve a compilation error messege when the class is not finished at the end of the file.
        [NON BACKWORD COMPATIBLE CHANGES]
        * string type become mutable using mutable type qualifir.
          This means string is no more immutable.
          Sorry. This is big change. If necessary, a defensive copy is needed.
          The reason of this change is that I wanted to avoid slowing the performance of string processing.
          I found this performance problem when I do tests of socket read/write using StringBuffer module.
        * Remove srand initialization because Fn module depend on Time module.
          Fn module should be caintan only number, string, and array utilities.
          Plese call srand manually
            Fn->srand(Time->time());

0.9500  2021-02-01
        [CHANGE]
        * Add SPVM::Builder::LinkInfo.
        * Add is_lib_file field to SPVM::Builder::ObjectFileInfo.
        * Add is_native_source to SPVM::Builder::ObjectFileInfo.
        * ccflags field of SPVM::Builder::ObjectFileInfo has the default value [].
        * Add utf32_to_utf16 method to Unicode module again.
        * Add utf16_to_utf32 method to Unicode module again.
        * Add utf16_to_utf8 method to Unicode module again.
        * Add ERROR_INVALID_UTF8 method to Unicode module again.
        [NON BACKWORD COMPATIBLE CHANGES]
        * The second argument of before_link callback of SPVM::Builder::Config is changed.
          [Before]
          An array reference of SPVM::Builder::ObjectFileInfo objects
          [After]
          A SPVM::Builder::LinkInfo object

0.9133  2021-01-31
        [CHANGE]
        * byte[] object is available in eq, ne, gt, ge, lt, le, cmp . operators.