@@ -8,6 +8,8 @@ Revision history for SPVM
         * Use native api "get_chars" more instead of "get_elems_byte" in the right places.
         * Add mutable type qualifier.
         * Improve a compilation error messege when the class is not finished at the end of the file.
+        * Add "value" method to StringBuffer class.
+        
         [NON BACKWORD COMPATIBLE CHANGES]
         * string type become mutable using mutable type qualifir.
           This means string is no more immutable.
